--- a/.gitignore
+++ b/.gitignore
@@ -112,3 +112,4 @@ xcuserdata
 **/xcshareddata/WorkspaceSettings.xcsettings
 
 # End of https://www.toptal.com/developers/gitignore/api/swift,xcode,swiftpm,cocoapods
+.DS_Store
