--- a/.github/ISSUE_TEMPLATE/Feature_Template.yaml
+++ b/.github/ISSUE_TEMPLATE/Feature_Template.yaml
@@ -7,7 +7,7 @@ body:
   - type: textarea
     id: feature-contents
     attributes:
-      label: Feature 설명
+      label: ✨ Feature 설명
       description: 작업할 Feature에 대한 설명을 적어주세요.
       placeholder: ex. 타이머 화면 그리기
     validations:
@@ -15,7 +15,7 @@ body:
   - type: input
     id: prepare-issue
     attributes:
-      label: Prepare Issue(Optional)
+      label: ✨ Prepare Issue(Optional)
       description: 관련된 Prepare가 있다면 적어주세요.
       placeholder: "ex. #14"
     validations:
@@ -23,7 +23,7 @@ body:
   - type: textarea
     id: related-view
     attributes:
-      label: Related View(Optional)
+      label: ✨ Related View(Optional)
       description: 작업하는 사항에 영향을 받는 View(화면)
       value: |
         - ex. HomeView
@@ -33,7 +33,7 @@ body:
   - type: dropdown
     id: priority
     attributes:
-      label: 우선순위
+      label: ✨ 우선순위
       description: Backlog에서의 중요도
       options:
         - ★★★★★
@@ -43,18 +43,3 @@ body:
         - ★
     validations:
       required: true
-
-  - type: input
-    id: expected-period
-    attributes:
-      label: 예상 작업 기간
-      placeholder: ~ MM/DD(E) ex. ~ 07/12(화)
-    validations:
-      required: true
-  - type: input
-    id: real-period
-    attributes:
-      label: 실제 작업 기간(PR 작성 직전에 수정
-      placeholder: ~ MM/DD(E) ex. ~ 07/12(화)
-    validations:
-      required: false
