--- a/.github/ISSUE_TEMPLATE/Fix_Template.yaml
+++ b/.github/ISSUE_TEMPLATE/Fix_Template.yaml
@@ -7,7 +7,7 @@ body:
   - type: input
     id: related-bug
     attributes:
-      label: Related Bug(Optaional)
+      label: ♻️ Related Bug(Optaional)
       description: 관련된 버그 이슈
       placeholder: "ex. #32, #23"
     validations:
@@ -15,7 +15,7 @@ body:
   - type: textarea
     id: before-fix
     attributes:
-      label: Current State
+      label: ♻️ Current State
       description: Fix 전(현재) 내용
       placeholder: "닉네임 설정 시, 공백을 Submit하면 아무런 반응 없음"
     validations:
@@ -23,22 +23,9 @@ body:
   - type: textarea
     id: after-fix
     attributes:
-      label: After State
+      label: ♻️ After State
       description: Fix 후 내용
       placeholder: "닉네임 설정 시, 공백을 Submit하면 Alert 표시"
     validations:
       required: true
-  - type: input
-    id: expected-period
-    attributes:
-      label: 예상 작업 기간
-      placeholder: ~ MM/DD(E) ex. ~ 07/12(화)
-    validations:
-      required: true
-  - type: input
-    id: real-period
-    attributes:
-      label: 실제 작업 기간(PR 작성 직전에 수정)
-      placeholder: ~ MM/DD(E) ex. ~ 07/12(화)
-    validations:
-      required: false
+
