[Chore] update bug issue template title and label

--- a/.github/ISSUE_TEMPLATE/Bug_Template.yaml
+++ b/.github/ISSUE_TEMPLATE/Bug_Template.yaml
@@ -1,7 +1,7 @@
 name: Bug Template
 description: 버그 발생 및 발견 시 제보하는 템플릿
-title: "[Bug]: 버그 이슈 제목"
-labels: ["bug"]
+title: "[Bug] 버그 이슈 제목"
+labels: ["🐞Bug"]
 
 body:
   - type: input
