--- a/.github/ISSUE_TEMPLATE/Fix_Template.yaml
+++ b/.github/ISSUE_TEMPLATE/Fix_Template.yaml
@@ -1,7 +1,7 @@
 name: Fix Template
 description: Fix 또는 Hotfix 사항이 있을 때 사용하는 템플릿
-title: "[Fix]: Fix 이슈 제목"
-labels: ["fix"]
+title: "[Fix] Fix 이슈 제목"
+labels: ["♻️Refactor"]
 
 body:
   - type: input
